# gptoolbox

./: .gitignore  .mailmap  .travis.yml  Documentation.txt  LICENSE-MIT  README  README.md  RELEASE_HISTORY.txt  TODO.todo  ignore.txt  organization.txt  style.md
dithering/: average.m  comparison.m  dither.m  hatch.m  randdither.m
geometry/: axisangle2matrix.m  slerp.m
history/: README  finish.m  last_command.m  preserve_history.m  startup.m
imageprocessing/: color_transfer.m  denoise.m  depth_darken.m  dith.m  get_scribbles.m  get_spray_painting.m  gp_bwboundaries.m  gp_bwlabel.m  gray2rgb.m  gray_bars.m  hatch.m  image_laplacian.m  imclose_sphere.m  imcurves.m  imdarken.m  imdir.m  imgrid.m  iminpaint.m  imnorm.m  imshow_before_and_after.m  imshow_rgb.m  imtrim.m  imupsample.m  imwrite_gif.m  isoluminate.m  levin.m  lin2oklab.m  lischinski.m  median_filter.m  oklab2lin.m  oklab2rgb.m  okloop.m  over.m  packpng.m  photoshop_imresize.m  photoshop_imshow.m  randdither.m  random_color.m  rgb2oklab.m  roifillpyramid.m  (+7 more)
images/: gorilla-yawning.psd  imdata.m
matlabPyrTools/: Contents.m  blur.m  buildWpyr.m  corrDn.m  corrDn.mexmac  corrDn.mexmaci64  histo.mexa64  histo.mexmaci64  imStats.m  mkGaussian.m  pointOp.mexa64  range2.mexglx  setPyrBand.m  upConv.mexa64  upConv.mexmac  upConv.mexw32
matlabPyrTools/MEX/: corrDn.c  pointOp.c  pointOp.mexglx  range2.mexmaci  range2.mexmaci64  upConv.mexmaci
matlabPyrTools/TUTORIALS/: README  matlabPyrTools.html  matlabPyrTools.m  pyramids.html
matlabPyrTools/TUTORIALS/.AppleDouble/: .Parent
matrix/: LBFGS.m  admm.m  affine_null_space.m  backtracking_line_search.m  bin_packing.m  combn.m  copysign.m  cs_jacobian.m  cspy.m  debug_sparse.m  default_mosek_param.m  default_quadprog_param.m  diag_blk_inv.m  dl_jacobian.m  eigen_format.m  fd.m  fd_jacobian.m  full_sparse.m  functionSignatures.json  graph_coloring.m  histogram_matching.m  interleave_rows.m  kroneye.m  l12_min.m  lexmin.m  line_search.m  linsolve_with_fixed.m  lu_lagrange.m  matrixnormalize.m  maxnz.m  merl_quadprog.m  min_quad_with_fixed.m  min_quad_with_fixed_active_set.m  minnz.m  msm_to_hb.m  nmultichoosek.m  normalizerow.m  normrow.m  occurrence.m  pagenull.m  (+16 more)
mesh/: .swp  SVG.m  TriScatteredInterpVector.m  aabb.m  add_isolines.m  add_lights.m  add_shadow.m  adjacency_dihedral_angle_matrix.m  adjacency_edge_cost_matrix.m  adjacency_incident_angle_matrix.m  adjacency_list.m  adjacency_matrix.m  affine_fit.m  all_pairs_distances.m  alpha_complex.m  animated_tetramesh.m  animated_trisurf.m  annulus.m  apply_ambient_occlusion.m  apply_matcap.m  apply_texture_map.m  arap.m  arap_dof.m  arap_energy.m  arap_gradient.m  arap_hessian.m  arap_linear_block.m  arap_rhs.m  arc_to_cubics.m  avgedge.m  axisangle2quat.m  axisanglebetween.m  bad_quad_mesh_from_quadtree.m  bake_onto_vertices.m  barycenter.m  barycentric_coordinates.m  beach_ball.m  bernstein_eval.m  betti.m  bfs_orient.m  (+588 more)
mex/: CGAL_typedefs.h  CMakeLists.txt  README.md  aabb.cpp  ambient_occlusion.cpp  angle_derivatives.cpp  blue_noise.cpp  blue_noise.m  bone_visible_embree.cpp  box_intersect.cpp  box_intersect.m  box_up.h  collapse_small_triangles.cpp  collapse_small_triangles.m  compile_gptoolbox_mex.m  cubic_winding_number.cpp  cubic_winding_number.m  decimate_cgal.cpp  decimate_cgal.m  decimate_libigl.cpp  decimate_libigl.m  dual_laplacian.cpp  dual_laplacian.m  eltopo.cpp  eltopo.m  exact_geodesic.cpp  exact_geodesic.m  example.cpp  fast_roots.cpp  fast_roots.m  fast_sparse.cpp  fast_sparse.m  fit_cubic_bezier.cpp  fit_cubic_bezier.m  fit_rotations_mex.cpp  fit_rotations_mex.m  form_factor.cpp  form_factor.m  functionSignatures.json  gptoolbox_mexopts.m  (+78 more)
mex/cmake/: FindELTOPO.cmake  FindLIBIGL.cmake  FindMATLAB.cmake  gptoolbox_download_project.cmake  libigl.cmake
mex/exactgeodesic/: exactgeodesic.m
mex/winding_number/: parse_rhs.cpp  parse_rhs.h  triangle_tree.cpp  triangle_tree.h  winding_number_ray.h
old/: curve_editing_1d.m  curve_editing_1d_system.m  curve_editing_1d_system_fixed.m
paths/: depends.m
plot/: fphong.m  interactive_fit.m  interactive_fit_plot.m  myaa.m  vectarrow.m
python/: pysparse.m
quat/: quatmultiply.m
tab_completion/: add_gptoolbox_tab_completion.m  add_igl_tab_completion.m  tabcomplete.m
utility/: NoCTranspose.m  PriorityQueue.m  README.md  accumndarray.m  add_gptoolbox_tab_completion.m  arrows.m  autohelp.m  base64decode.m  base64encode.m  blue.m  cache.m  cache_test.m  clear_class.m  create_cache.m  dark_mode.m  dec2bin_logical.m  depends.m  derekblue.m  enable_toolbox.m  extract_arg.m  figgif.m  figmp4.m  figpng.m  find_cache.m  finish.m  finish.m.bak  gold.m  gptoolbox_version.m  html_color.m  is_writable.m  last_command.m  lipmanya.m  orange.m  pink.m  pride.m  progressbar.m  report_mosek_error.m  startup.m  startup.m.bak  teal.m  (+6 more)
wrappers/: find_first_path.m  medit.m  meshfix.m  meshfix_components.m  nested_cages.m  path_to_convert.m  path_to_eltopo.m  path_to_libigl.m  path_to_medit.m  path_to_meshfix.m  path_to_qslim.m  path_to_tetgen.m  path_to_triangle.m  plane_drop.m  qslim.m  readSCISIM.m  tetgen.m  texture_map.m  triangle.m
